@@ -15,7 +15,7 @@
 	call	installvirteeprom
 %endif
 %endmacro
-
+	
 %ifdef VIRTUAL_EEPROM
 
 	CODE_SECTION
@@ -23,22 +23,17 @@
 	align	4
 
 installvirteeprom:
-               push eax  ; save them
-               push ebx
-
-               mov ebx,[options+4] ; reload tray options   <<<<<< add !!!!!!!
-               test ebx,256  ; eeprom off mask       <<<<<< add !!!!!!!
-               jne short ee_off.          ;                       <<<<<< add !!!!!!!
-
-               lea eax,[ee_fp] ; eeprom off file name
-               call open_file ; go try to open eeprom_off file
-               cmp     [esi+4],dword 01h; status was put here by NtOpenfile (8 bytes total)
-               jne short do_ve. ; file not there !
+	push	eax			; save them
+	push	ebx
+	lea	eax,[ee_fp]		; eeprom off file name
+	call	open_file		; go try to open eeprom_off file
+	cmp     [esi+4],dword 01h	; status was put here by NtOpenfile (8 bytes total)
+	jne	short do_ve.		; file not there !
 ;---------------------------------------
-               push dword [ebx]
-               call dword [NtClose]
-ee_off.        add esp,4+4  ; unwind stack       ; <<<<<< add ee_off. 
-               ret   ; were done, no virtual eeprom 
+	push	dword [ebx]
+	call	dword [NtClose]
+	add	esp,4+4			; unwind stack
+	ret				; were done, no virtual eeprom 
 ;---------------------------------------
 do_ve.	pop	ebx
 	pop	eax
@@ -50,7 +45,7 @@ do_ve.	pop	ebx
 	mov	[virteeprom_open.cache+2],eax
 
 	mov	esi,[memdiff]
-
+	
 	lea	ebp,[edi+virteeprom_open-virteeprom_patch-5]
 	sub	ebp,ebx
 	mov	edx,[ebx+esi+1]
@@ -59,7 +54,7 @@ do_ve.	pop	ebx
 	lea	edx,[edx+ebx+5]
 	setcalljmptarget edx, virteeprom_patch, virteeprom_open.var_diskstuff, edi
 
-
+	
 	mov	ebx,[kexports]
 	add	ebx,esi
 	mov	ecx,virteeprom_patch
@@ -68,7 +63,7 @@ do_ve.	pop	ebx
 	call	tune_exp_refs
 	pop	esi
 
-
+	
 	mov	eax,[ebx + KERNEL_EXPORTS.HalReadSMBusValue]
 	add	eax,80010000h
 	mov	byte [eax+esi],0E9h
@@ -101,7 +96,7 @@ do_ve.	pop	ebx
 
 
 	mov	ebp,esi
-
+	
 	mov	esi,virteeprom_patch
 	mov	ecx,VIRTUAL_EEPROM_SIZE/4
 	add	edi,ebp
@@ -135,16 +130,16 @@ virteeprom_open:
 
 	push	eax
 	mov	ecx,esp
-
+	
 	push	eax
 	push	eax
 	mov	eax,esp
-
+	
 	push	byte 40h
 .sefa:	push	(.eeprom_file - virteeprom_patch)
 	push	byte 0
 	mov	edx,esp
-
+	
 	push	byte 62h	; FILE_SYNCHRONOUS_IO_NONALERT |
 				; FILE_NON_DIRECTORY_FILE |
 				; FILE_WRITE_THROUGH
@@ -175,14 +170,14 @@ virteeprom_open:
 
 	ret
 
-
+	
 .eeprom_filestr	db VIRTUAL_EEPROM_PATH, 0
 .eeprom_file	dw $-.eeprom_filestr-1, $-.eeprom_filestr
 		dd .eeprom_filestr-virteeprom_patch
 
-
-
-
+	
+	
+	
 virteeprom_HalReadSMBusValue_hook:
 	push	ebp
 	mov	ebp,esp
@@ -202,20 +197,20 @@ virteeprom_HalReadSMBusValue_hook:
 	test	ecx,ecx
 	jz	.goreal
 
-
+	
 	push	esi
-
+	
 	push	eax
 	push	eax
 	mov	esi,esp
-
+	
 	xor	edx,edx
 	mov	eax,[ebp+14h]
 	mov	[eax],edx
 	cmp	byte [ebp+10h],0
 	setne	dl
 	inc	dl
-
+	
 	movzx	eax,byte [ebp+0Ch]
 	push	byte 0
 	push	eax
@@ -231,7 +226,7 @@ virteeprom_HalReadSMBusValue_hook:
 	add	esp,byte 8+8
 
 	pop	esi
-
+	
 	test	eax,eax
 	mov	eax,0C0000185h	; STATUS_IO_DEVICE_ERROR
 	jl	.err
@@ -240,7 +235,7 @@ virteeprom_HalReadSMBusValue_hook:
 
 	leave
 	ret	16
-
+	
 
 
 virteeprom_HalWriteSMBusValue_hook:	
@@ -265,7 +260,7 @@ virteeprom_HalWriteSMBusValue_hook:
 %else
 	jz	.exit_success
 %endif
-
+	
 
 %ifndef DISABLE_VIRTUAL_EEPROM_WRITE	
 	push	esi
@@ -273,12 +268,12 @@ virteeprom_HalWriteSMBusValue_hook:
 	push	eax
 	push	eax
 	mov	esi,esp
-
+	
 	xor	edx,edx
 	cmp	byte [ebp+10h],0
 	setne	dl
 	inc	dl
-
+	
 	movzx	eax,byte [ebp+0Ch]
 	push	byte 0
 	push	eax
@@ -295,13 +290,13 @@ virteeprom_HalWriteSMBusValue_hook:
 	add	esp,byte 8+8
 
 	pop	esi
-
+	
 	test	eax,eax
 	mov	eax,0C0000185h	; STATUS_IO_DEVICE_ERROR
 	jl	.err
 
 %endif ; !DISABLE_VIRTUAL_EEPROM_WRITE
-
+	
 .exit_success:	
 	xor	eax,eax
 .err:
@@ -330,4 +325,3 @@ VIRTUAL_EEPROM_SIZE	equ $-virteeprom_patch
 VIRTUAL_EEPROM_SIZE	equ 0
 
 %endif	; !VIRTUAL_EEPROM
-																																																
